--- a/css/styles.css
+++ b/css/styles.css
@@ -105,10 +105,10 @@ body{
   border-bottom: 3px solid white;
   width:50%;
 }
-#contact-section{
+/* #contact-section{
   padding-top: 5vh;
 
-}
+} */
 
 
 .partner-logos{
@@ -246,8 +246,14 @@ body {
   margin-bottom: 5%;
 }
 #who{
-  margin-bottom: 20vh;
+  margin-top:-16vh;
+  padding-top:4%;
 }
+#solution{
+  padding-top: 12.1%;
+  margin-top: -12%;
+}
+
 /* styling for social media buttons in footer */
 .fa {
   padding: 10px;
@@ -756,7 +762,8 @@ h5{
 #contact{
   width:100%;
   height:195%;
-  padding-top: 2vh;
+  padding-top: 10vh;
+  margin-top:-10vh;
   margin-bottom: 17vh;
 }
 
@@ -1174,7 +1181,7 @@ and (-webkit-min-device-pixel-ratio: 2){
   }
   #demo08{
     margin-left: 1%;
-    /* margin-top: -40%; */
+    margin-top: 10%;
   }
 
   #facebook-award {
@@ -1201,26 +1208,18 @@ and (-webkit-min-device-pixel-ratio: 2){
   #press-logo2{
     margin-top: 3%;
   }
-  /* #copyright{
-    margin-top: 7vh;
-  } */
+
   #press-logo .hover10 figure {
   	margin-left: 10vw;
-
-
   }
-
+.job-content{
+  margin-top: -10em;
+}
 
   #contact-section{
     margin-top: -8em;
   }
-  /* #bloomerg-techmoran .hover10 figure {
-    width: 85%;
-    padding-left: 4vw;
-  } */
-#icons{
-  padding: 10%;
-}
+
 
 
 }
@@ -1229,16 +1228,9 @@ and (-webkit-min-device-pixel-ratio: 2){
     height:95%;
   }
 
-  /* .fa-bars{
-    margin-bottom: 6.5vh;
-  } */
-
   #who{
     margin-top: -2%;
   }
-  /* #footer-text{
-    width:120%;
-  } */
 
 }
 @media screen and (max-width:743px){
@@ -1544,7 +1536,7 @@ figure:hover+span {
 }
 footer ul{
   margin-bottom:-30em;
-  margin-top: 3em;
+  /* margin-top: 3em; */
   width:125%;
 }
 
@@ -1897,9 +1889,17 @@ figure:hover+span {
     margin-top:2vh;
   }
   #who{
-    margin-top: 12vh;
+    margin-top: -7vh;
+    padding-top: 10%;
   }
+  #contact{
 
+    padding-top: 16vh;
+    margin-top:-5vh;
+  }
+  #contact-card{
+    width:100%;
+  }
 }
 
 
@@ -1998,15 +1998,6 @@ figure:hover+span {
   #jumbotron-text{
     margin-top: 110%;
   }
-  #footer-text{
-    margin-left: 1%;
-  }
-  #copyright{
-    margin-left:-18%;
-  }
-  #icons{
-    margin-left: -16%;
-  }
 
   .dark-blue-text,.fa-bars {
       color: #c83e2c;
@@ -2056,7 +2047,7 @@ figure:hover+span {
 
   }
   #trio-team{
-    margin-top:5vh;
+    margin-top:66%;
     margin-left: -3%;
   }
   #trio-team span h4{
@@ -2108,6 +2099,24 @@ figure:hover+span {
   #icons{
     width:130%;
   }
+#contact .card-header{
+  font-size: 1vh;
+}
+#solution{
+  margin-top: -10vw;
+  padding-top:30vw;
+}
+
+#contact{
+
+  padding-top: 26vh;
+  margin-top:-10vh;
+  margin-bottom: 17vh;
+}
+#who{
+  margin-top:-15vh;
+  padding-top:24%;
+}
 
 
 
@@ -2145,6 +2154,22 @@ figure:hover+span {
   margin-left: 2em;
 } */
 
+#contact{
+  width:100%;
+  height:195%;
+  padding-top: 23vh;
+  margin-top:-10vh;
+  margin-bottom: 17vh;
+}
+
+#who{
+  margin-top:-16vh;
+  padding-top:24%;
+}
+#solution{
+  margin-top:-26vh;
+  padding-top:34%;
+}
 #all-partner-logos .hover10 figure {
   width: 90%;
   height: 190%;
@@ -2154,7 +2179,7 @@ figure:hover+span {
 }
 
 #icons{
-  width:91vw;
+  width:86vw;
 }
 
 
@@ -2257,7 +2282,7 @@ figure:hover+span {
   width:100%;
 }
 #contact-section .card-header h4{
-  font-size: 6vh;
+  font-size: 5.3vh;
   color:white;
   font-family: 'VegurRegular';
 }
@@ -2302,10 +2327,7 @@ figure:hover+span {
   margin-top: 1%;
 } */
 
-#solution{
-  padding-top: 12.1%;
-  margin-top: -12%;
-}
+
 #press-logo a{
   color:grey;
 
